apps/echoip-proxyproto-canary/versions/1.0--1.0/manifests/proxyproto-canary-gateway-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: echoip-proxyproto-canary-gateway
  labels:
    app: echoip-proxyproto-canary
spec:
  type: ClusterIP
  selector:
    app: echoip-proxyproto-canary
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8080
