apps/echoip-proxyproto-canary/versions/1.0--1.0/manifests/proxyproto-canary-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: echoip-proxyproto-canary
  annotations:
    load-balancer.hetzner.cloud/location: "nbg1"
    load-balancer.hetzner.cloud/name: "k8s01-echoip-proxyproto-canary"
    load-balancer.hetzner.cloud/uses-proxyprotocol: "true"
  labels:
    app: echoip-proxyproto-canary
spec:
  type: LoadBalancer
  externalTrafficPolicy: Local
  selector:
    app: echoip-proxyproto-canary
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8080
