apps/echoip-proxyproto-canary/versions/1.0--1.0/manifests/proxyproto-canary-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: echoip-proxyproto-canary
spec:
  parentRefs:
    - name: echoip-proxyproto-canary
      namespace: gateway
      sectionName: http
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: echoip-proxyproto-canary
          port: 80
